# python-cli-template

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/cli-name/: cli.py
src/cli_name/: cli.py  main.py
