[project]
name = "cli-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.26.8",
]

[project.scripts]
cli-template = "cli_template.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"